# ali_face_engine_android_demo

./: .gitignore  ali_face_engine.config  archive.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/alibaba/cloud/alifaceenginedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  utils.cpp
app/src/main/cpp/ali_face_engine_jni/: CMakeLists.txt  FaceEngineHelper.cpp  FaceEngineHelper.h  FaceEngineJNI.cpp
app/src/main/cpp/ali_face_engine_jni/include/: Codec.h  FaceAttributeAnalyze.h  FaceDetect.h  FaceEngine.h  FaceRecognize.h  FaceRegister.h  FaceVerify.h  Tools.h  type.h
app/src/main/java/com/alibaba/cloud/alifaceenginedemo/: AllGroupsActivity.java  AuthDialog.java  CreateGroupDialog.java  DefaultService.java  FaceFrameView.java  FeatureAdapter.java  GroupActivity.java  GroupAdapter.java  MenuActivity.java  PersonActivity.java  PersonAdapter.java  (+11 more)
app/src/main/res/drawable/: item_click_back_selector.xml
app/src/main/res/layout/: activity_group.xml  activity_groups.xml  activity_main.xml  activity_menu.xml  activity_personal.xml  activity_recognition.xml  activity_recognizecamera.xml  activity_recognizephoto.xml  activity_registeredphoto.xml  activity_verifycamera.xml  activity_verifyphoto.xml  activity_wel.xml  auth_dialog.xml  create_group.xml  currency_title.xml  dialog_modify.xml  item_ry_facelibrary.xml  set_run_mode.xml  settings.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
